--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Allerta&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap"
+        rel="stylesheet">
     <title>Pig Game</title>
 </head>
 
@@ -14,36 +18,62 @@
             <div class="piggame__header">
                 <div class="piggame__btns">
                     <button class="piggame__btns--rolldice">Roll Dice!</button>
-                    <button class="piggame__btns--hold">Hold!</button>
+                    <button class="piggame__btns--hold">Hold</button>
                 </div>
                 <div class="piggame__info">
-                    some information
+                    <div class="piggame__info--limit">
+                        <div class="piggame__info--firstnumber">
+                            <p>4</p>
+                        </div>
+                        <div class="piggame__info--secondnumber">
+                            <p>2</p>
+                        </div>
+                        <div></div>
+                    </div>
+                    <!-- <p class="piggame__info--info">Who first earn 50 he win!</p> -->
                 </div>
             </div>
             <div class="piggame__body">
                 <!-- player -->
                 <div class="piggame__player">
                     <div class="piggame__score">
-                        <p class="piggame__score--name">Your</p>
+                        <p class="piggame__score--name">You</p>
                         <p class="piggame__score--point">0</p>
                     </div>
                     <div class="piggame__current">
-                        <p class="piggame__current--name">Your</p>
-                        <p class="piggame__current--point">0</p>
+                        <p class="piggame__current--name">0</p>
+                        <p class="piggame__current--point">current</p>
+                    </div>
+                </div>
+                <div class="piggame__dice">
+                    <div class="piggame__dice--cube">
+                        <div class="piggame__dice--face">1</div>
+                        <div class="piggame__dice--face">2</div>
+                        <div class="piggame__dice--face">3</div>
+                        <div class="piggame__dice--face">4</div>
+                        <div class="piggame__dice--face">5</div>
+                        <div class="piggame__dice--face">6</div>
+                    </div>
+                    <div class="piggame__dice--cube">
+                        <div class="piggame__dice--face">1</div>
+                        <div class="piggame__dice--face">2</div>
+                        <div class="piggame__dice--face">3</div>
+                        <div class="piggame__dice--face">4</div>
+                        <div class="piggame__dice--face">5</div>
+                        <div class="piggame__dice--face">6</div>
                     </div>
                 </div>
                 <!-- rival -->
                 <div class="piggame__player">
                     <div class="piggame__score">
-                        <p class="piggame__score--name">Your</p>
+                        <p class="piggame__score--name">Rival</p>
                         <p class="piggame__score--point">0</p>
                     </div>
                     <div class="piggame__current">
-                        <p class="piggame__current--name">Your</p>
-                        <p class="piggame__current--point">0</p>
+                        <p class="piggame__current--name">0</p>
+                        <p class="piggame__current--point">current</p>
                     </div>
                 </div>
-                <div class="piggame__cpu"></div>
             </div>
         </div>>
     </div>
