layout almsot done

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Allerta&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap"
         rel="stylesheet">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <title>Pig Game</title>
 </head>
 
@@ -30,14 +33,87 @@
                     <p>+</p>
                 </div>
                 <div class="piggame__create--btn">
-                    <button>Create Account</button>
+                    <button>Select Account</button>
 
                 </div>
 
             </div>
-            <div class="piggame__account"></div>
-            <div class="piggame__amount"></div>
-            <div class="piggame__history"></div>
+            <div class="piggame__account">
+                <h2 class="piggame__account--h2">
+                    Account
+                </h2>
+                <p class="piggame__account--name">Name</p>
+                <div class="piggame__account--list">
+                    <p><i class="far fa-user"></i><span>Dejan</span><i class="far fa-trash-alt"></i>
+                    </p>
+                    <p><i class="far fa-user"></i><span>Sara</span><i class="far fa-trash-alt"></i></p>
+                    <p><i class="far fa-user"></i><span>Mirjana</span><i class="far fa-trash-alt"></i></p>
+                    <p><i class="far fa-user"></i><span>Dundula</span><i class="far fa-trash-alt"></i></p>
+                    <div class="piggame__account--addorremove"><span>+</span></div>
+
+
+                </div>
+            </div>
+            <div class="piggame__amount">
+                <h2 class="piggame__account--h2">
+                    Total Budget
+                </h2>
+                <div class="piggame__amount--name">
+                    <p>Valute</p>
+                    <p>Amount</p>
+                </div>
+                <div class="piggame__amount--list">
+                    <div class="piggame__amount--money">
+                        <p>$</p>
+                        <p>1000</p>
+                    </div>
+                    <div class="piggame__amount--money">
+                        <p>$</p>
+                        <p>500</p>
+                    </div>
+                    <div class="piggame__amount--money">
+                        <p>$</p>
+                        <p>1200</p>
+                    </div>
+                    <div class="piggame__amount--money">
+                        <p>$</p>
+                        <p>800</p>
+                    </div>
+                </div>
+            </div>
+            <div class="piggame__history">
+                <h2 class="piggame__account--h2">
+                    History
+                </h2>
+                <div class="piggame__history--name">
+                    <p>Date</p>
+                    <p>Win</p>
+                    <p>Lose</p>
+                </div>
+                <div class="piggame__history--list">
+                    <div class="piggame__history--date">
+                        <p>27. 11. 2019.</p>
+                        <p>300</p>
+                        <p>0</p>
+                    </div>
+                    <div class="piggame__history--date">
+                        <p>27. 11. 2019.</p>
+                        <p>300</p>
+                        <p>0</p>
+                    </div>
+                    <div class="piggame__history--date">
+                        <p>27. 11. 2019.</p>
+                        <p>0</p>
+                        <p>1200</p>
+                    </div>
+                    <div class="piggame__history--date">
+                        <p>27. 11. 2019.</p>
+                        <p>300</p>
+                        <p>0</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
